apps/media/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
        app.kubernetes.io/instance: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.3-nightly
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads-qbittorrent
              mountPath: /downloads/qbittorrent
            - name: downloads-slskd
              mountPath: /downloads/completed
            - name: media
              mountPath: /music

        - name: exportarr-lidarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0
          args:
            - lidarr
          ports:
            - containerPort: 9707
              name: metrics
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: downloads-qbittorrent
          hostPath:
            path: /downloads/qbittorrent
        - name: downloads-slskd
          hostPath:
            path: /downloads/slskd/completed
        - name: media
          hostPath:
            path: /media/music
