apps/media/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: 8686
    - name: metrics
      port: 9707
      targetPort: 9707
  type: ClusterIP
