apps/media/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lidarr.phoenyxlab.xyz
  rules:
    - host: lidarr.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
