apps/media/lidarr/lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
        app.kubernetes.io/instance: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.3-nightly
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads-qbittorrent
              mountPath: /downloads/qbittorrent
            - name: downloads-slskd
              mountPath: /downloads/completed
            - name: media
              mountPath: /music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: downloads-qbittorrent
          hostPath:
            path: /downloads/qbittorrent
        - name: downloads-slskd
          hostPath:
            path: /downloads/slskd/completed
        - name: media
          hostPath:
            path: /media/music
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - port: 8686
      targetPort: 8686
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lidarr.phoenyxlab.xyz
  rules:
    - host: lidarr.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
